--- a/Tp3_Regex (4).ipynb
+++ b/Tp3_Regex (4).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "98bce14f-98b2-4855-99c3-284c9f0f1322",
    "metadata": {},
    "outputs": [],
@@ -44,12 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "db4c55db-2416-43bc-83b3-07eea37df2d7",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alice', 'Alice', 'Among', 'As', 'After', 'As']\n"
+     ]
+    }
+   ],
    "source": [
     "print(re.findall(r'A[a-z]+', s))"
    ]
@@ -64,10 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4b499ed5-e972-4116-a721-dbfb29e781d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['alice@example.com.']\n"
+     ]
+    }
+   ],
    "source": [
     "print(re.findall(r'\\S+@\\S+', s))"
    ]
@@ -82,10 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ec71a1d9-d971-4119-9124-a3f993069eeb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(re.findall(r'\\d', s)))"
    ]
@@ -100,12 +124,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "084f2eb3-e67c-45bd-8460-b113b6794e82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['https://www.treasurehunt.com']\n"
+     ]
+    }
+   ],
    "source": [
-    "print(re.sub(r'http://|https://',' ', s))\n"
+    "print(re.findall(r\"https*://www.\\w+.com\", s))\n"
    ]
   },
   {
@@ -118,12 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "a88f57ea-c034-49e3-9586-bcf1a9b795f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123-456-7890']\n"
+     ]
+    }
+   ],
    "source": [
-    "print(re.sub(r'http://|https://',' ', s))\n"
+    "print(re.findall(r\"\\d{3}-\\d{3}-\\d{4}\", s))\n"
    ]
   },
   {
@@ -136,10 +176,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "fc8577e1-8f37-4c29-91f1-314736687689",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Once upon a time, in the enchanted land of Regexville, there lived a group of intrepid explorers.\n",
+      "Their leader, Alice, was known for her love of adventure and her trusty email address, alice@example.com.\n",
+      "Her phone number, 123-456-7890, was her lifeline in times of trouble.\n",
+      "One day, Alice received a mysterious letter with today's date: 08/10/2023. The letter hinted at an upcoming quest.\n",
+      "The explorers gathered at the local inn, where they found a weathered map marked with a hashtag: #adventure.\n",
+      "The map pointed to a hidden treasure on the website https://www.treasurehunt.com. The inn's address was 123 Main Street, Regexville, ZIP: 12345-6789.\n",
+      "Their journey took them through the ancient forest, where they stumbled upon a cave with cryptic inscriptions:\n",
+      "\"Java is amazing!\" and \"Java is equally fascinating!\" The explorers knew they were on the right path.\n",
+      "Inside the cave, they found a device with the IP address 192.168.1.1 and a MAC addres of 00-B0-D0-63-C2-26, which held valuable clues.\n",
+      "\n",
+      "Among the explorers, there was a wordsmith who loved finding words with three consecutive vowels:\n",
+      "\"boasting,\" \"quizzical,\" \"genuine,\" and \"queue\" were some of his favorites.\n",
+      "As they continued their adventure, they encountered Lorem Ipsum, a lorem ipsum generator who spoke in Latin:\n",
+      "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit.\"\n",
+      "In their pursuit, they stumbled upon an ancient book with mysterious ISBN-10 and ISBN-13 numbers:\n",
+      "ISBN-10: 123456789X and ISBN-13: 978-1234567890.\n",
+      "Their journey was filled with unexpected twists and turns, much like the regex patterns they used to decipher clues.\n",
+      "After a long day, the explorers gathered around a campfire, sharing tales of their encounters. They realized that every step of their adventure was a puzzle waiting to be solved, just like the regex challenges they had conquered.\n",
+      "As they drifted off to sleep under a starlit sky, they knew that their quest for treasure and knowledge had only just begun, and the magic of Regexville would continue to guide their way.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(re.sub(r\"Python\",\"Java\", s))"
    ]
@@ -154,10 +224,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1a47bad6-3a06-42d4-a8fb-5b68b9b91173",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['12345-6789', '123456789', '123456789']\n"
+     ]
+    }
+   ],
    "source": [
     "zip=re.findall(r\"\\d{5}-?\\d{4}\", s)\n",
     "print(zip)\n"
@@ -173,10 +251,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8c582872-3f44-46e1-b3d5-c185a248cedb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['mysterious', 'queue', 'mysterious']\n"
+     ]
+    }
+   ],
    "source": [
     "vowels=re.findall(r\"\\w+[a,e,i,o,u][a,e,i,o,u][a,e,i,o,u]\\w+\", s)\n",
     "print(vowels)"
@@ -192,12 +278,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "b3ccfe62-4b3c-4ead-89f7-e33b52dd43c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Python is amazing!', 'Java is equally fascinating!', 'boasting,', 'quizzical,', 'genuine,', 'queue', 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.']\n"
+     ]
+    }
+   ],
    "source": [
-    "print(re.sub(r'\".*\\w*.\"',' ', s))"
+    "print(re.findall(r'\"([^\"]+)\"', s))"
    ]
   },
   {
@@ -210,12 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "cf67cec5-9f4a-42ac-866f-4f28111d2f1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['08/10/2023']\n"
+     ]
+    }
+   ],
    "source": [
-    "print(re.sub(r'\\d{2}/\\d{2}/\\d{4}',' ', s))"
+    "print(re.findall(r\"\\d{2}[/]\\d{2}[/]\\d{4}\", s))"
    ]
   },
   {
@@ -228,12 +330,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "67e053c3-c06c-490d-83d2-13d5873df074",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' upon', ' a', ' time', ' in', ' the', ' enchanted', ' land', ' of', ' there', ' lived', ' a', ' group', ' of', ' intrepid', ' explorers', ' leader', ' was', ' known', ' for', ' her', ' love', ' of', ' adventure', ' and', ' her', ' trusty', ' email', ' address', ' alice', ' phone', ' number', ' was', ' her', ' lifeline', ' in', ' times', ' of', ' trouble', ' day', ' received', ' a', ' mysterious', ' letter', ' with', ' today', ' date', ' letter', ' hinted', ' at', ' an', ' upcoming', ' quest', ' explorers', ' gathered', ' at', ' the', ' local', ' inn', ' where', ' they', ' found', ' a', ' weathered', ' map', ' marked', ' with', ' a', ' hashtag', ' map', ' pointed', ' to', ' a', ' hidden', ' treasure', ' on', ' the', ' website', ' https', ' inn', ' address', ' was', ' journey', ' took', ' them', ' through', ' the', ' ancient', ' forest', ' where', ' they', ' stumbled', ' upon', ' a', ' cave', ' with', ' cryptic', ' inscriptions', ' is', ' amazing', ' and', ' is', ' equally', ' fascinating', ' explorers', ' knew', ' they', ' were', ' on', ' the', ' right', ' path', ' the', ' cave', ' they', ' found', ' a', ' device', ' with', ' the', ' address', ' and', ' a', ' addres', ' of', ' which', ' held', ' valuable', ' clues', ' the', ' explorers', ' there', ' was', ' a', ' wordsmith', ' who', ' loved', ' finding', ' words', ' with', ' three', ' consecutive', ' vowels', ' and', ' were', ' some', ' of', ' his', ' favorites', ' they', ' continued', ' their', ' adventure', ' they', ' encountered', ' a', ' lorem', ' ipsum', ' generator', ' who', ' spoke', ' in', ' ipsum', ' dolor', ' sit', ' amet', ' consectetur', ' adipiscing', ' elit', ' their', ' pursuit', ' they', ' stumbled', ' upon', ' an', ' ancient', ' book', ' with', ' mysterious', ' and', ' numbers', ' and', ' journey', ' was', ' filled', ' with', ' unexpected', ' twists', ' and', ' turns', ' much', ' like', ' the', ' regex', ' patterns', ' they', ' used', ' to', ' decipher', ' clues', ' a', ' long', ' day', ' the', ' explorers', ' gathered', ' around', ' a', ' campfire', ' sharing', ' tales', ' of', ' their', ' encounters', ' realized', ' that', ' every', ' step', ' of', ' their', ' adventure', ' was', ' a', ' puzzle', ' waiting', ' to', ' be', ' solved', ' just', ' like', ' the', ' regex', ' challenges', ' they', ' had', ' conquered', ' they', ' drifted', ' off', ' to', ' sleep', ' under', ' a', ' starlit', ' sky', ' they', ' knew', ' that', ' their', ' quest', ' for', ' treasure', ' and', ' knowledge', ' had', ' only', ' just', ' begun', ' and', ' the', ' magic', ' of', ' would', ' continue', ' to', ' guide', ' their', ' way']\n"
+     ]
+    }
+   ],
    "source": [
-    "print(re.sub(r'\\b[a-z]+',' ', s))"
+    "print(re.findall(r\"\\s[a-z]+\", s))"
    ]
   },
   {
@@ -246,10 +356,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "93e50146-3390-46d7-8440-23dc4f0b5e5f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#adventure']\n"
+     ]
+    }
+   ],
    "source": [
     "print(re.findall(r'#.\\w*', s))"
    ]
@@ -264,10 +382,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "cf458093-044e-47f8-bdac-4d8ce22669ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123456789X', '978-1234567890']\n"
+     ]
+    }
+   ],
    "source": [
     "isbn=re.findall(r\"\\d{9}.{1}|\\d{3}-\\d{10}\", s)\n",
     "print(isbn)"
@@ -283,10 +409,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "8f44b3b6-be95-48ab-af59-e7bc2c26a652",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['there', 'lived', 'group', 'Their', 'Alice', 'known', 'email', 'alice', 'phone', 'times', 'Alice', 'today', 'quest', 'local', 'where', 'found', 'https', 'Their', 'where', 'right', 'found', 'which', 'clues', 'Among', 'there', 'loved', 'words', 'three', 'queue', 'their', 'Lorem', 'Ipsum', 'lorem', 'ipsum', 'spoke', 'Latin', 'Lorem', 'ipsum', 'dolor', 'their', 'Their', 'turns', 'regex', 'clues', 'After', 'tales', 'their', 'every', 'their', 'regex', 'sleep', 'under', 'their', 'quest', 'begun', 'magic', 'would', 'guide', 'their']\n"
+     ]
+    }
+   ],
    "source": [
     "characters=re.findall(r\"\\b[a-zA-Z]{5}\\b\",s)\n",
     "print(characters)"
@@ -302,12 +436,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "2a0082f4-c83b-44fc-a710-ae0dab06bc1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['192.168.1.1']\n"
+     ]
+    }
+   ],
    "source": [
-    "print(re.findall(r'\\b([^aeiou\\s.\\-\\/])\\w+(\\1)\\b', s))"
+    "print(re.findall(r\"\\d{3}[.]\\d{3}[.]\\d{1}[.]\\d{1}\", s))"
    ]
   },
   {
@@ -320,12 +462,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "65481a0a-c36c-4b2a-a354-0393c98520cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['upcoming', 'amazing', 'fascinating', 'finding', 'boasting', 'adipiscing', 'sharing', 'waiting']\n"
+     ]
+    }
+   ],
    "source": [
-    "print(re.findall(r'[L|l]orem [i|I]psum', s))"
+    "print(re.findall(r\"\\w+[i][n][g]\\b\", s))"
    ]
   },
   {
@@ -338,12 +488,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "014b0956-6ef8-46a1-8f0b-635e8bbad63b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['00-B0-D0-63-C2-26']\n"
+     ]
+    }
+   ],
    "source": [
-    "print(re.findall(r'([^aeiou\\s\\-\\/])\\1', s))"
+    "print(re.findall(r\"\\w{2}-\\w{2}-\\w{2}-\\w{2}-\\w{2}-\\w{2}\", s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05c6fbb2",
+   "metadata": {},
+   "source": [
+    "#### Create a Python program to find all words that are before and after an 'and' from a given text. (x and y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "d6e6b9b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['adventure and her', 'X and ISBN', 'twists and turns', 'treasure and knowledge']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r\"[a-zA-Z]+\\sand\\s[a-zA-Z]+\", s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04877e8f",
+   "metadata": {},
+   "source": [
+    "#### Create a Python program to find all words from a given text that start and end with the same letter and it is not a vowel\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ebac8a25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['adventure and her', 'X and ISBN', 'twists and turns', 'treasure and knowledge']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r\"[a-z|A-Z]+\\sand\\s[a-z|A-Z]+\", s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "409cf5d9",
+   "metadata": {},
+   "source": [
+    "#### Create a Python program to find all \"lorem ipsum\" appearences (not cap sensitive) from a given text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "237930fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lorem Ipsum', 'lorem ipsum', 'Lorem ipsum']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r\"[l|L][o|O][r|R][e|E][m|M] [i|I][p|P][s|S][u|U][m|M]\", s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5d56ca0",
+   "metadata": {},
+   "source": [
+    "#### Create a Python program to find all repeating equal consonants from a given text. (nn,tt ...)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "66f28165",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['l', 'd', 's', 't', 't', 'n', 'd', 't', 'w', 'n', 'd', 's', 'l', 'l', 'd', 's', 'd', '0', 'z', 'l', 't', 'z', 'l', 'f', 'l']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r\"([^aeiouAEIOU\\s/])\\1\", s)\n",
+    ")"
    ]
   }
  ],
